# epigraphs

./: README.md  pyproject.toml
src/epigraph/: cli.py  model.py  parser.py  render_dot.py  render_mmd.py
